Another round of cleaning up the http files  * Moved all user checks to the base.html so there is less chance of a future security hole  * Made a new jinga block called insecure for html that should be still presented when no one is logged in

--- a/gs_manager/templates/file_manager/delete.html
+++ b/gs_manager/templates/file_manager/delete.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Delete Confirmation{% endblock %}</h1>
+  {% block title %}Delete Confirmation{% endblock %}
 
 {% endblock %}
 
