--- a/gs_manager/templates/file_manager/edit.html
+++ b/gs_manager/templates/file_manager/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Character editor{% endblock %}</h1>
+  {% block title %}Character editor{% endblock %}
 {% endblock %}
 
 {% block content %}
