--- a/gs_manager/templates/server_config/wtf_create.html
+++ b/gs_manager/templates/server_config/wtf_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Server Configuration{% endblock %}</h1>
+  {% block title %}Server Configuration{% endblock %}
 {% endblock %}
 
 {% block content %}
