--- a/gs_manager/templates/volume_manager/create.html
+++ b/gs_manager/templates/volume_manager/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Create Volume Group {% endblock %}</h1>
+  {% block title %}Create Volume Group {% endblock %}
 {% endblock %}
 
 {% block content %}
