--- a/gs_manager/templates/volume_manager/edit.html
+++ b/gs_manager/templates/volume_manager/edit.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Edit Volume Manager Group {% endblock %}</h1>
+  {% block title %}Edit Volume Manager Group {% endblock %}
 {% endblock %}
 
 {% block content %}
