--- a/gs_manager/templates/base.html
+++ b/gs_manager/templates/base.html
@@ -24,6 +24,7 @@
         <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
         <li><a href="{{ url_for('auth.register') }}">Reg</a></li>
       {% else %}
+        <li><a href="{{ url_for('auth.register') }}">Reg</a></li>
         <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
       {% endif %}
     </ul>
@@ -31,6 +32,7 @@
   
   <body>
     <h1><center>{% block title %}{% endblock %}</center></h1>
+    {% if g.user %}
     <div class="content">
       <h1>{{ title }}</h1>
       {% block content %}{% endblock %}
@@ -43,6 +45,8 @@
     <script type="text/javascript" charset="utf8" src="https://cdn.datatables.net/select/3.0.0/js/dataTables.select.js"></script>
   
     {% block scripts %}{% endblock %}
+    {% endif %}
+    {% block insecure %}{% endblock %}
   </body>
 </html>
 
