--- a/gs_manager/templates/player_history/index.html
+++ b/gs_manager/templates/player_history/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Player History{% endblock %}</h1>
+  {% block title %}Player History{% endblock %}
 {% endblock %}
 
 {% block content %}
