--- a/gs_manager/templates/players/index.html
+++ b/gs_manager/templates/players/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Logged in users{% endblock %}</h1>
+  {% block title %}Logged in users{% endblock %}
 
 {% endblock %}
 
