--- a/gs_manager/templates/server_config/create.html
+++ b/gs_manager/templates/server_config/create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block header %}
-  <h1>{% block title %}Server Config{% endblock %}</h1>
+  {% block title %}Server Config{% endblock %}
 {% endblock %}
 
 {% block content %}
